# DjangoVue

./: README.md
backend/: pyproject.toml  schema.yml
backend/common/: helpers.py  pagination.py  views.py
backend/common/api/: schema.py
backend/myapp/: schema_views.py  settings.py  urls.py
backend/myapp/api/: router.py  urls.py
backend/templates/: vue.html
backend/templates/schema/: redoc.html
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: fetch.ts
frontend/src/@types/: jamescoyle__vue-icon.d.ts
frontend/src/api/: runtime.ts
frontend/src/api/.openapi-generator/: FILES
frontend/src/api/apis/: SchemaApi.ts  index.ts
frontend/src/api/models/: ErrorDetail.ts  ForbiddenError.ts  NotFoundError.ts  UnauthenticatedError.ts  ValidationError.ts  index.ts
frontend/src/assets/: main.css
frontend/src/pages/welcome/: Welcome.ts  Welcome.vue
frontend/src/presets/aura/autocomplete/: index.js
frontend/src/presets/aura/button/: index.js
frontend/src/presets/aura/cascadeselect/: index.js
frontend/src/presets/aura/checkbox/: index.js
frontend/src/presets/aura/datatable/: index.js
frontend/src/presets/aura/dialog/: index.js
frontend/src/presets/aura/dropdown/: index.js
frontend/src/presets/aura/fileupload/: index.js
frontend/src/presets/aura/inputnumber/: index.js
frontend/src/presets/aura/listbox/: index.js
frontend/src/presets/aura/menu/: index.js
frontend/src/presets/aura/multiselect/: index.js
frontend/src/presets/aura/paginator/: index.js
(+11 files in other folders)
